* Change rooms page layout to center (8% margin) * Fixed rooms link misaligned bug

--- a/mingstar/css/gallery-style.css
+++ b/mingstar/css/gallery-style.css
@@ -143,15 +143,25 @@
 }
 
 .room-type-navbar {
-    text-align: center;
+    margin-left: 8%;
+	margin-right: 8%;
+	text-align: center;
 }
+
+.room-title {
+	margin-left:    auto;
+    margin-right:   auto;
+    max-width:      100%;
+	margin-top: 50px;
+}
+
 .room-container {
     margin-left:    auto;
     margin-right:   auto;
     max-width:      100%;
     margin:         0;
 }
-.room-container h1 {
+.room-title h1 {
     font-family: Impact, Charcoal, sans-serif;
 }
 
@@ -198,7 +208,7 @@ text-align: center;
     font-size: 15px;
     font-style: bold;
     margin-bottom: 10px;
-    min-width: 200px;
+    /*min-width: 200px;*/
     padding: 6px 6px 9px;
     text-align: center;
     width: 100%;
